--- a/index.html
+++ b/index.html
@@ -15,8 +15,26 @@
 </head>
 <body background="background.jpg">
   <center>
-    <h1 class="btn btn-info heading">Object Detection</h1>
 
-    <h3 id="status" class="btn btn-danger"></h3>
+    <button class="btn btn-success living_room"  style="width: 500px; height: 50px; margin-top: 250px;" onclick="change();">Living Room</button>
+    <br>
+    <br>
+    <button class="btn btn-danger bedroom" onclick="change1();" style="width: 500px; height: 50px; ">Bedroom</button>
+    <br>
+    <br>
+    <button class="btn btn-warning garden" onclick="change2();" style="width: 500px; height: 50px;">Garden</button>
+
   </center>
 </body>
+</html>
+<script>
+    function change(){
+        window.location.replace("livingroom.html");
+    }
+    function change1(){
+        window.location.replace("bedroom.html");
+    }
+    function change2(){
+        window.location.replace("garden.html");
+    }
+</script>
